 + Randomizing map/theme in online-mode will not include DLC-content
 + New teams start with a random grave and fort
 + Hedgewars creates 4 human teams and 2 computer teams on its first launch
 + Allow to randomize hog names, hats, team name, flag, grave, voice and fort separately
 + “Random team” button is now able to randomly select from all available hats
 * Fix flag being selectable for computer players although it had no effect
 * Campaign screen does no longer show AI-controlled teams
 * Campaign names and campaign mission names can now be translated
 * Creating randomized teams now randomizes (almost) every aspect
 * Fixed mostly broken descriptions for multiplayer mission maps
 * Clicking on "New" in weapon scheme editor now creates empty weapon scheme instead of default
 * Fix language names in language list being always in English
 * Prevent starting game with >48 hogs (because engine doesn't support it yet)
 * Fix the key for toggling team bars being incorrectly described
 * Fix caption of stats screen showing only one winner if multiple teams have won
 * Remove broken “Play again” button appearing in stats page after an online game
 * Weapons scheme editor: When leaving, it no longer flickers and the selection is not reset to Default

Content Creation:
 + Theme objects can now have more than 1 in-land rect specified. You can specify the amount in theme.cfg by adding another number (and ,) before the first rect
 + Theme objects can now be placed on water (by setting first in-land rectangle to 0,0,0,0)
 + Themes can now use flakes with negative falling speed (rising flakes)
 + Themes can now contain custom sound files: splash.ogg Droplet1.ogg Droplet2.ogg Droplet3.ogg skip.ogg
 + Themes can now have mirrored clouds and flakes: CloudsL.png, SDCloudsL.png, FlakeL.png, SDFlakeL.png
 + Water in themes supports custom animation and flow speed with water-animation and sd-water-animation in theme.cfg