@@ -34,6 +34,7 @@ class AmmoSchemeModel : public QAbstractTableModel
         QVariant headerData(int section, Qt::Orientation orientation, int role) const;
         int rowCount(const QModelIndex & parent) const;
         int columnCount(const QModelIndex & parent) const;
+        bool hasScheme(QString name);
         Qt::ItemFlags flags(const QModelIndex & index) const;
         bool setData(const QModelIndex & index, const QVariant & value, int role = Qt::EditRole);
         bool insertRows(int row, int count, const QModelIndex & parent = QModelIndex());
