@@ -265,6 +265,7 @@ Frontend:
  + Hedgewars creates 4 human teams and 2 computer teams on its first launch
  + Allow to randomize hog names, hats, team name, flag, grave, voice and fort separately
  + “Random team” button is now able to randomly select from all available hats
+ + Creating new game/weapon schemes guarantees unique names
  * Fix flag being selectable for computer players although it had no effect
  * Campaign screen does no longer show AI-controlled teams
  * Campaign names and campaign mission names can now be translated
